@@ -27,7 +27,6 @@ import net.minecraft.client.gui.components.*;
 import net.minecraft.network.chat.CommonComponents;
 import net.minecraft.network.chat.Component;
 
-import java.time.Duration;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -46,9 +45,9 @@ public class MacroOptionList extends MacroBindList {
     private final Macro macro;
     private OptionList.Entry.ActionButton addMessageEntry;
 
-    public MacroOptionList(Minecraft mc, int width, int height, int y, int entryWidth,
+    public MacroOptionList(Minecraft mc, int width, int height, int top, int bottom, int entryWidth,
                            int entryHeight, int entrySpacing, Profile profile, Macro macro) {
-        super(mc, width, height, y, entryWidth, entryHeight, entrySpacing, profile,
+        super(mc, width, height, top, bottom, entryWidth, entryHeight, entrySpacing, profile,
                 new HashMap<>(Map.of(Entry.MessageOptions.class, macro::moveMessage)));
         this.macro = macro;
 
@@ -103,7 +102,7 @@ public class MacroOptionList extends MacroBindList {
             children().add(start, new OptionList.Entry.Space(msgEntry));
             children().add(start, msgEntry);
         }
-        clampScrollAmount();
+        setScrollAmount(getScrollAmount());
     }
 
     // Custom entries
@@ -166,7 +165,7 @@ public class MacroOptionList extends MacroBindList {
                         .create(movingX, 0, buttonWidth, height,
                                 localized("option", "macro.control.hud"),
                                 (button, status) -> profile.setShowHudMessage(macro, status));
-                hudButton.setTooltipDelay(Duration.ofMillis(500));
+                hudButton.setTooltipDelay(500);
                 hudButton.active = hudActive;
                 elements.add(hudButton);
                 movingX += buttonWidth + SPACE_SMALL;
@@ -182,7 +181,7 @@ public class MacroOptionList extends MacroBindList {
                         .create(movingX, 0, buttonWidth, height,
                                 localized("option", "macro.control.history"),
                                 (button, status) -> profile.setAddToHistory(macro, status));
-                historyButton.setTooltipDelay(Duration.ofMillis(500));
+                historyButton.setTooltipDelay(500);
                 historyButton.active = historyActive;
                 elements.add(historyButton);
                 movingX = x + width - buttonWidth * 2 - SPACE_SMALL;
@@ -198,7 +197,7 @@ public class MacroOptionList extends MacroBindList {
                         .create(movingX, 0, buttonWidth, height,
                                 localized("option", "macro.control.resume"),
                                 (button, status) -> profile.setResumeRepeating(macro, status));
-                resumeButton.setTooltipDelay(Duration.ofMillis(500));
+                resumeButton.setTooltipDelay(500);
                 resumeButton.active = resumeActive;
                 elements.add(resumeButton);
                 movingX += buttonWidth + SPACE_SMALL;
@@ -214,7 +213,7 @@ public class MacroOptionList extends MacroBindList {
                         .create(movingX, 0, buttonWidth, height,
                                 localized("option", "macro.control.ratelimit"),
                                 (button, status) -> profile.setUseRatelimit(macro, status));
-                ratelimitButton.setTooltipDelay(Duration.ofMillis(500));
+                ratelimitButton.setTooltipDelay(500);
                 ratelimitButton.active = ratelimitActive;
                 elements.add(ratelimitButton);
             }
@@ -266,7 +265,7 @@ public class MacroOptionList extends MacroBindList {
                     List<Integer> values = new ArrayList<>();
                     for (int i = 0; i < macro.getMessages().size(); i++) values.add(i);
                     if (values.isEmpty()) values.add(0);
-                    if (macro.cycleIndex > values.getLast()) macro.cycleIndex = 0;
+                    if (macro.cycleIndex > values.get(values.size() - 1)) macro.cycleIndex = 0;
                     elements.add(CycleButton.<Integer>builder(
                                     (status) -> Component.literal(status.toString()))
                             .withValues(values)
@@ -371,7 +370,7 @@ public class MacroOptionList extends MacroBindList {
                     delayField.setTooltip(Tooltip.create(
                             localized("option", "macro.delay.individual.tooltip"
                                     + (index == 0 ? ".first" : ".subsequent"))));
-                    delayField.setTooltipDelay(Duration.ofMillis(500));
+                    delayField.setTooltipDelay(500);
                     delayField.setMaxLength(8);
                     delayField.setResponder((val) -> {
                         // Resize
